tests/typecheck/fail/interpolation_wrong_to_string_return.tw
type Counter = .{ n: Int }

fn to_string(c: Counter) Int {
    c.n
}

fn render_counter() String {
    c := Counter.{ n: 7 }
    "${c}"
}
